--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
